Refactor project structure: - Added .gitattributes for text file handling. - Updated .gitignore to exclude additional files and directories. - Removed unused routes and views related to users, schedules, hotels, and vegetables. - Updated package dependencies to version 6.2.1 for Prisma and related packages. - Modified app.js to streamline routing. - Updated README with setup instructions for the World Weather Application. - Removed obsolete database files and migrations.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,25 @@
-node_modules
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# SQLite データベース
+*.db
+*.db-journal
+
+# Prisma
+prisma/generated/
+
+# 環境変数ファイル
+.env
+.env.local
+.env.*.local
+
+# その他
+.DS_Store
+Thumbs.db
+.idea/
+.vscode/
+*.log
+*.tmp
