--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "nodemon": "nodemon ./bin/www"
+    "start": "node ./bin/www"
   },
   "dependencies": {
-    "@prisma/client": "^5.19.1",
+    "@prisma/client": "^6.2.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
@@ -20,6 +19,6 @@
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
-    "prisma": "^5.19.1"
+    "prisma": "^6.2.1"
   }
 }
